--- a/src/visualization.ipynb
+++ b/src/visualization.ipynb
@@ -53,13 +53,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -178,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ... load the greedy_decode, doing it with Markus' new code?"
+    "# ... load the greedy_decode, doing it with Markus' new code?\n"
    ]
   },
   {
@@ -243,19 +236,75 @@
     "            tooltip=[\"row\", \"column\", \"value\", \"row_token\", \"col_token\"],\n",
     "        )  #Changes color intensity based on value, displays values when hovering over the rects\n",
     "        #.title(f\"Layer {layer} Head {head}\")\n",
-    "        .properties(height=400, width=400, title=f\"Layer {layer} Head {head}\")\n",
-    "        .interactive()\n",
+    "        .properties(height=400, width=400, title=f\"Layer {layer} Head {head}\") #sets size and gives dynamic titles \n",
+    "        .interactive() # enables zooming etc.\n",
     "    )\n",
     "\n",
-    "def get_all_attention_maps(attn_type: str, layers: list[int], heads: list[int], row_tokens: list, col_tokens, max_sentence_len: int):\n",
+    "def get_all_attention_maps(attn_type: str, layers: list[int], heads: list[int], row_tokens: list, col_tokens, max_sentence_len: int): \n",
+    "    # Creates grid of attention maps by layers and heads\n",
     "    charts = []\n",
     "    for layer in layers:\n",
     "        rowCharts = []\n",
     "        for head in heads:\n",
-    "            rowCharts.append(attn_map(attn_type, layer, head, row_tokens, col_tokens, max_sentence_len))\n",
-    "        charts.append(alt.hconcat(*rowCharts))\n",
-    "    return alt.vconcat(*charts) #Attention of all heads and all layers that are given as the input"
+    "            rowCharts.append(attn_map(attn_type, layer, head, row_tokens, col_tokens, max_sentence_len)) #Creates Heatmaps for each layer \n",
+    "        charts.append(alt.hconcat(*rowCharts)) #horizontal concatenation to arrange attention maps for all heads in a single row\n",
+    "    return alt.vconcat(*charts) # vertical concatenation to stack rows on top of each other\n",
+    "    \n",
+    "    \n",
+    "    #Attention of all heads and all layers that are given as the input"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch, encoder_input_tokens, decoder_input_tokens = load_next_batch()\n",
+    "print(f'Source: {batch[\"src_text\"][0]}')\n",
+    "print(f'Target: {batch[\"tgt_text\"][0]}')\n",
+    "sentence_len = encoder_input_tokens.index(\"[PAD]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layers = [0, 1, 2]\n",
+    "heads = [0, 1, 2, 3, 4, 5, 6, 7]\n",
+    "\n",
+    "# Encoder Self-Attention\n",
+    "get_all_attention_maps(\"encoder\", layers, heads, encoder_input_tokens, encoder_input_tokens, min(20, sentence_len))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encoder Self-Attention\n",
+    "get_all_attention_maps(\"decoder\", layers, heads, decoder_input_tokens, decoder_input_tokens, min(20, sentence_len))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encoder Self-Attention\n",
+    "get_all_attention_maps(\"encoder-decoder\", layers, heads, encoder_input_tokens, decoder_input_tokens, min(20, sentence_len))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
