--- a/src/visualization.ipynb
+++ b/src/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,18 +167,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ... load the greedy_decode, doing it with Markus' new code?\n"
+    "def decode_model(model):\n",
+    "    encoded = self.model.encode(to_encoder, mask_encoder) # Input goes into the encoder, encoded = Output of it\n",
+    "    to_decoder = torch.empty(1,1).fill_(s_token).type_as(to_encoder).to(self.device)\n",
+    "    # Initializes tensor of shape (1,1), fills it with SOS tokens, sets it to be of the same type as to_encoder, gets it onto cuda\n",
+    "    for iteration in range(0, self.max_tokens): # iterates until it reaches the limit for the sequence length\n",
+    "\t    mask_decoder = TranslationDataset.triangular_mask(to_decoder.size(1)).type_as(mask_encoder).to(self.device)\n",
+    "\t    #Creates triangular matrix of initial size (1,1), this will increase with each iteration, makes sure it is of the same type, gets it onto cuda\n",
+    "\t\t\t\t\t\t\t\n",
+    "\t    # get output\n",
+    "\t    output = self.model.decode(encoded, mask_encoder, to_decoder, mask_decoder) \n",
+    "\t    #Passes all inputs needed into the decoder block\n",
+    "\n",
+    "\t    p = self.model.project(output[:, -1])\n",
+    "\t    #Extracts last predicted token and passes it through the projection layer, which maps the decoder output to logits over the vocabulary\n",
+    "\t    _, most_likely = torch.max(p, dim=1)\n",
+    "\n",
+    "\t    if most_likely == e_token: break # we reached the end\n",
+    "\t    #next run with old content to decode + most likely token\n",
+    "\t    to_decoder = torch.cat(\n",
+    "            [\n",
+    "                to_decoder,  # Last input\n",
+    "                torch.empty(1,1).type_as(to_encoder).fill_(most_likely.item()).to(self.device)  # Creates new tensor with shape (1,1), makes sure of the type, fills it with predicted token, and puts it onto device used\n",
+    "            ], dim=1\n",
+    "        ) #dim=1 concats it along the row, dim=0 would stack them on top of each other\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nDo I need this?\\nconfig = get_config()\\nfile_path = str(Path(\\'.\\').parent.resolve() / config[\"TRAIN_DIRECTORY\"] / config[\"datasource\"] / config[\"CHECKPOINT_DIRECTORY\"] / config[\"model_name\"])\\nprint(file_path)\\n\\n#Load pretrained weights\\nstate = torch.load(file_path)\\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Do I need this?\n",
@@ -193,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,26 +237,27 @@
     "    return pd.DataFrame(\n",
     "        [\n",
     "            (\n",
-    "                r, #iterating over all rows\n",
-    "                c, #iterating over all columns \n",
-    "                float(m[r, c]), #Gets the attention value at [r, c], is a number\n",
-    "                \"%.3d %s\" % (r, row_tokens[r] if len(row_tokens) > r else \"<blank>\"), #\"%.3d %s\" % formats number as a three-digit integer\n",
-    "                \"%.3d %s\" % (c, col_tokens[c] if len(col_tokens) > c else \"<blank>\"), #Retrieves the index if it exists, if it is out of range fills it with \"blank\"\n",
+    "                rows, #iterating over all rows\n",
+    "                columns , #iterating over all columns  \n",
+    "                float(m[rows, columns]), #Gets the attention value at [row, ccolumn], is a number\n",
+    "                \"%.3d %s\" % (rows, row_tokens[rows] if len(row_tokens) > rows else \"<blank>\"), #\"%.3d %s\" % formats number as a three-digit integer\n",
+    "                \"%.3d %s\" % ( columns , col_tokens[columns] if len(col_tokens) > columns  else \"<blank>\"), #Retrieves the index if it exists, if it is out of range fills it with \"blank\"\n",
     "            ) #row_tokens and col_tokens give a number\n",
-    "            for r in range(m.shape[0]) #.shape returns the shape of the matrix\n",
-    "            for c in range(m.shape[1]) #.shape returns the shape of the matrix\n",
-    "            if r < max_row and c < max_col # The tuple which has been created above is only added if r < max_row and c < max_col\n",
+    "            for rows in range(m.shape[0]) #.shape returns the shape of the matrix\n",
+    "            for columns in range(m.shape[1]) #.shape returns the shape of the matrix\n",
+    "            if rows < max_row and columns < max_col # The tuple which has been created above is only added if rows < max_row and columns < max_col\n",
     "        ],\n",
-    "        columns=[\"row\", \"column\", \"value\", \"row_token\", \"col_token\"], #defines column names for the Pandas DataFrame being created.\n",
+    "        columns =[\"row\", \"column\", \"value\", \"row_token\", \"col_token\"], #defines column names for the Pandas DataFrame being created.\n",
     "    )\n",
     "\n",
     "def get_attn_map(attn_type: str, layer: int, head: int): #Gets a specific attention type from a specified layer and a specified head\n",
     "    if attn_type == \"encoder\":\n",
-    "        attn = model.encoder.layers[layer].self_attention_block.attention_scores # self attention_scores comes from calculate_attention in transformer\n",
+    "        \n",
+    "        attn = model.encoder.encoder_module_list._modules['0'].self_attention_layer.attention_scores # self attention_scores comes from calculate_attention in transformer\n",
     "    elif attn_type == \"decoder\":\n",
-    "        attn = model.decoder.layers[layer].self_attention_block.attention_scores # self\n",
+    "        attn = model.encoder.encoder_module_list._modules['0'].self_attention_layer.attention_scores # self\n",
     "    elif attn_type == \"encoder-decoder\":\n",
-    "        attn = model.decoder.layers[layer].cross_attention_block.attention_scores # cross\n",
+    "        attn = model.encoder.encoder_module_list._modules['0'].cross_attention_layer.attention_scores #cross\n",
     "    return attn[0, head].data\n",
     "    #Shape (batch_size, num_heads, query_len, key_len) Gets the first sample in the batch for inference and the specified attention head, .data to extract raw tensor values\n",
     "\n",
@@ -260,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch, encoder_input_tokens, decoder_input_tokens = load_next_batch()\n",
+    "batch, encoder_input_tokens, decoder_input_tokens = load_batch()\n",
     "print(f'Source: {batch[\"src_text\"][0]}')\n",
     "print(f'Target: {batch[\"tgt_text\"][0]}')\n",
     "sentence_len = encoder_input_tokens.index(\"[PAD]\")"
