--- a/src/visualization.ipynb
+++ b/src/visualization.ipynb
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from train import DataSetLoader\n",
+    "from train import DataSetLoader, Training\n",
     "from config import get_config\n",
     "from transformer import Transformer\n",
     "from transformer import TransformerBuilder"
@@ -147,27 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_batch():\n",
-    "    batch = next(iter(validation_dataloader)) # Loads the next iteration of the validation, goes in sequence, not in parallel\n",
-    "    encoder_input = batch[\"to_encoder\"]  # Gets the encoder-input of the item in the batch\n",
-    "    decoder_input = batch[\"to_decoder\"]\n",
-    "    encoder_mask = batch[\"mask_encoder\"] # Gets the mask of the item in the batch\n",
-    "    decoder_mask = batch[\"mask_decoder\"]\n",
-    "\n",
-    "    encoder_input_tokens = [vocab_source.id_to_token(index) for index in encoder_input[0].cpu().numpy()] #Convert Id's to tokens which are mapped to the dictionary\n",
-    "    decoder_input_tokens = [vocab_target.id_to_token(index) for index in decoder_input[0].cpu().numpy()]\n",
-    "\n",
-    "    assert encoder_input.size(0) == 1, \"Batch size must be 1 for validation\" \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,35 +175,20 @@
     "                torch.empty(1,1).type_as(to_encoder).fill_(most_likely.item()).to(self.device)  # Creates new tensor with shape (1,1), makes sure of the type, fills it with predicted token, and puts it onto device used\n",
     "            ], dim=1\n",
     "        ) #dim=1 concats it along the row, dim=0 would stack them on top of each other\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nDo I need this?\\nconfig = get_config()\\nfile_path = str(Path(\\'.\\').parent.resolve() / config[\"TRAIN_DIRECTORY\"] / config[\"datasource\"] / config[\"CHECKPOINT_DIRECTORY\"] / config[\"model_name\"])\\nprint(file_path)\\n\\n#Load pretrained weights\\nstate = torch.load(file_path)\\n'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "Do I need this?\n",
-    "config = get_config()\n",
-    "file_path = str(Path('.').parent.resolve() / config[\"TRAIN_DIRECTORY\"] / config[\"datasource\"] / config[\"CHECKPOINT_DIRECTORY\"] / config[\"model_name\"])\n",
-    "print(file_path)\n",
     "\n",
-    "#Load pretrained weights\n",
-    "state = torch.load(file_path)\n",
-    "\"\"\""
+    "def load_batch():\n",
+    "    batch = next(iter(validation_dataloader)) # Loads the next iteration of the validation, goes in sequence, not in parallel\n",
+    "    encoder_input = batch[\"to_encoder\"]  # Gets the encoder-input of the item in the batch\n",
+    "    decoder_input = batch[\"to_decoder\"]\n",
+    "    encoder_mask = batch[\"mask_encoder\"] # Gets the mask of the item in the batch\n",
+    "    decoder_mask = batch[\"mask_decoder\"]\n",
+    "\n",
+    "    encoder_input_tokens = [vocab_source.id_to_token(index) for index in encoder_input[0].cpu().numpy()] #Convert Id's to tokens which are mapped to the dictionary\n",
+    "    decoder_input_tokens = [vocab_target.id_to_token(index) for index in decoder_input[0].cpu().numpy()]\n",
+    "\n",
+    "    assert encoder_input.size(0) == 1, \"Batch size must be 1 for validation\" \n",
+    "\n",
+    "    model_out = decode_model(model, encoder_input, encoder_mask, vocab_source, vocab_target, config[\"MAX_SUPPORTED_SENTENCE_TOKEN_LENGTH\"], device)\n"
    ]
   },
   {
@@ -291,15 +256,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "\t\t\tto_encoder = batch['to_encoder'].to(self.device)\n",
+    "\t\t\tto_decoder = batch['to_decoder'].to(self.device)\n",
+    "\t\t\tmask_encoder = batch['mask_encoder'].to(self.device)\n",
+    "\t\t\tmask_decoder = batch['mask_decoder'].to(self.device)\n",
+    "\t\t\tlabel = batch['label'].to(self.device)\n",
+    "\n",
+    "\t\t\t# for debug\n",
+    "\t\t\ttext_source = batch['text_source']\n",
+    "\t\t\ttext_target = batch['text_target']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'validation_dataloader' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m batch, encoder_input_tokens, decoder_input_tokens \u001b[38;5;241m=\u001b[39m \u001b[43mload_batch\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSource: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbatch[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext_source\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTarget: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbatch[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext_target\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[1], line 27\u001b[0m, in \u001b[0;36mload_batch\u001b[1;34m()\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mload_batch\u001b[39m():\n\u001b[1;32m---> 27\u001b[0m     batch \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28miter\u001b[39m(\u001b[43mvalidation_dataloader\u001b[49m)) \u001b[38;5;66;03m# Loads the next iteration of the validation, goes in sequence, not in parallel\u001b[39;00m\n\u001b[0;32m     28\u001b[0m     encoder_input \u001b[38;5;241m=\u001b[39m batch[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mto_encoder\u001b[39m\u001b[38;5;124m\"\u001b[39m]  \u001b[38;5;66;03m# Gets the encoder-input of the item in the batch\u001b[39;00m\n\u001b[0;32m     29\u001b[0m     decoder_input \u001b[38;5;241m=\u001b[39m batch[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mto_decoder\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'validation_dataloader' is not defined"
+     ]
+    }
+   ],
    "source": [
     "batch, encoder_input_tokens, decoder_input_tokens = load_batch()\n",
-    "print(f'Source: {batch[\"src_text\"][0]}')\n",
-    "print(f'Target: {batch[\"tgt_text\"][0]}')\n",
-    "sentence_len = encoder_input_tokens.index(\"[PAD]\")"
+    "print(f'Source: {batch[\"text_source\"][0]}')\n",
+    "print(f'Target: {batch[\"text_target\"][0]}')\n",
+    "sentence_len = encoder_input_tokens.index(\"[P]\")"
    ]
   },
   {
@@ -341,6 +334,23 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Do I need this?\n",
+    "config = get_config()\n",
+    "file_path = str(Path('.').parent.resolve() / config[\"TRAIN_DIRECTORY\"] / config[\"datasource\"] / config[\"CHECKPOINT_DIRECTORY\"] / config[\"model_name\"])\n",
+    "print(file_path)\n",
+    "\n",
+    "#Load pretrained weights\n",
+    "state = torch.load(file_path)\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
