Got source and target sentences

--- a/src/visualization.ipynb
+++ b/src/visualization.ipynb
@@ -33,11 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "from train import DataSetLoader, Training\n",
+    "from dataset import TranslationDataset\n",
     "from config import get_config\n",
     "from transformer import Transformer\n",
     "from transformer import TransformerBuilder"
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,10 +140,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['<S>', ',,', 'Wann', 'mögen', 'Sie', 'uns', 'vermißt', 'haben', ',', 'Tom', '?\"', '<E>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>', '<P>']\n",
+      "torch.Size([500])\n"
+     ]
+    }
+   ],
    "source": [
+    "batch = next(iter(validation_dataloader)) # Loads the next iteration of the validation, goes in sequence, not in parallel\n",
+    "encoder_input = batch[\"to_encoder\"].to(device)  # Gets the encoder-input of the item in the batch\n",
+    "decoder_input = batch[\"to_decoder\"].to(device)\n",
+    "\n",
+    "#print(encoder_input)\n",
+    "encoder_input_tokens = [vocab_source.id_to_token(index) for index in encoder_input.cpu().numpy().flatten()]\n",
+    "print(encoder_input_tokens)\n",
+    "\n",
+    "print(encoder_input.size())\n",
+    "\n",
+    "\n",
     "def load_batch():\n",
     "    batch = next(iter(validation_dataloader)) # Loads the next iteration of the validation, goes in sequence, not in parallel\n",
     "    encoder_input = batch[\"to_encoder\"].to(device)  # Gets the encoder-input of the item in the batch\n",
@@ -153,25 +174,31 @@
     "    encoder_input_tokens = [vocab_source.id_to_token(index) for index in encoder_input.cpu().numpy().flatten()] #encoder_input[0] refers to the batch, get it onto cpu, convert tensor to numpy array to make it iterable\n",
     "    decoder_input_tokens = [vocab_target.id_to_token(idx) for idx in decoder_input.cpu().numpy().flatten()] #Convert Id's to tokens which are mapped to the dictionary\n",
     "\n",
+    "    encoder_input = encoder_input.unsqueeze(0) #This has to be reworked\n",
     "    assert encoder_input.size(0) == 1, \"Batch size must be 1 for validation\" \n",
     "\n",
     "    model_out = decode_model(model, encoder_input, encoder_mask, vocab_source, vocab_target, config[\"MAX_SUPPORTED_SENTENCE_TOKEN_LENGTH\"], device)\n",
     "\n",
     "    return batch, encoder_input_tokens, decoder_input_tokens\n",
     "\n",
-    "def decode_model(model, encoder_input, encoder_mask, vocab_source, vocab_target, config, device):\n",
-    "    encoded = self.model.encode(to_encoder, mask_encoder) # \n",
-    "    to_decoder = torch.empty(1,1).fill_(s_token).type_as(to_encoder).to(self.device)\n",
+    "max_tokens = config['MAX_SUPPORTED_SENTENCE_TOKEN_LENGTH']\n",
+    "\n",
+    "def decode_model(model, to_encoder, mask_encoder, vocab_source, vocab_target, config, device):\n",
+    "    s_token = tokenizer_target.token_to_id(\"<S>\")\n",
+    "    e_token = tokenizer_target.token_to_id(\"<E>\")\n",
+    "    \n",
+    "    encoded = model.encode(to_encoder, mask_encoder) # \n",
+    "    to_decoder = torch.empty(1,1).fill_(s_token).type_as(to_encoder).to(device)\n",
     "    # Initializes tensor of shape (1,1), fills it with SOS tokens, sets it to be of the same type as to_encoder, gets it onto cuda\n",
-    "    for iteration in range(0, self.max_tokens): # iterates until it reaches the limit for the sequence length\n",
-    "\t    mask_decoder = TranslationDataset.triangular_mask(to_decoder.size(1)).type_as(mask_encoder).to(self.device)\n",
+    "    for iteration in range(0, max_tokens): # iterates until it reaches the limit for the sequence length\n",
+    "\t    mask_decoder = TranslationDataset.triangular_mask(to_decoder.size(1)).type_as(mask_encoder).to(device)\n",
     "\t    #Creates triangular matrix of initial size (1,1), this will increase with each iteration, makes sure it is of the same type, gets it onto cuda\n",
     "\t\t\t\t\t\t\t\n",
     "\t    # get output\n",
-    "\t    output = self.model.decode(encoded, mask_encoder, to_decoder, mask_decoder) \n",
+    "\t    output = model.decode(encoded, mask_encoder, to_decoder, mask_decoder) \n",
     "\t    #Passes all inputs needed into the decoder block\n",
     "\n",
-    "\t    p = self.model.project(output[:, -1])\n",
+    "\t    p = model.project(output[:, -1])\n",
     "\t    #Extracts last predicted token and passes it through the projection layer, which maps the decoder output to logits over the vocabulary\n",
     "\t    _, most_likely = torch.max(p, dim=1)\n",
     "\n",
@@ -180,7 +207,7 @@
     "\t    to_decoder = torch.cat(\n",
     "            [\n",
     "                to_decoder,  # Last input\n",
-    "                torch.empty(1,1).type_as(to_encoder).fill_(most_likely.item()).to(self.device)  # Creates new tensor with shape (1,1), makes sure of the type, fills it with predicted token, and puts it onto device used\n",
+    "                torch.empty(1,1).type_as(to_encoder).fill_(most_likely.item()).to(device)  # Creates new tensor with shape (1,1), makes sure of the type, fills it with predicted token, and puts it onto device used\n",
     "            ], dim=1\n",
     "        )\n",
     "        #dim=1 concats it along the row, dim=0 would stack them on top of each other\n",
@@ -189,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,14 +280,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['to_encoder', 'to_decoder', 'label', 'text_source', 'text_target', 'mask_encoder', 'mask_decoder'])\n",
+      "Source: ,,Wann mögen Sie uns vermißt haben, Tom?\"\n",
+      "Target: \"When would they miss us, Tom?\"\n"
+     ]
+    }
+   ],
    "source": [
     "batch, encoder_input_tokens, decoder_input_tokens = load_batch()\n",
-    "print(f'Source: {batch[\"text_source\"][0]}')\n",
-    "print(f'Target: {batch[\"text_target\"][0]}')\n",
-    "sentence_len = encoder_input_tokens.index(\"[P]\")"
+    "print(batch.keys())  # Shows all available keys in the batch\n",
+    "\n",
+    "print(f'Source: {batch['text_source']}')\n",
+    "print(f'Target: {batch['text_target']}')\n",
+    "sentence_len = encoder_input_tokens.index(\"<P>\")"
    ]
   },
   {
