--- a/src/visualization.ipynb
+++ b/src/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting directory: /home/caverntwo/source/repos/SUMMIT\n"
+      "Starting directory: d:\\Github\\SUMMIT\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -73,25 +73,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Base directory for model/training data: train/opus_books\n",
-      "Tokenize directory: train/opus_books/tokenize\n",
-      "Checkpoint directory: train/opus_books/checkpoints\n",
-      "Model directory: train/opus_books/model\n",
+      "Base directory for model/training data: train\\opus_books\n",
+      "Tokenize directory: train\\opus_books\\tokenize\n",
+      "Checkpoint directory: train\\opus_books\\checkpoints\n",
+      "Model directory: train\\opus_books\\model\n",
       "Checking devices...\n",
       "... found cuda\n",
       "Seed: 69420\n",
       "Loading raw dataset...\n",
       "Creating tokenizers...\n",
-      "Looking for tokenizer file: /home/caverntwo/source/repos/SUMMIT/train/opus_books/tokenize/de.json\n",
+      "Looking for tokenizer file: D:\\Github\\SUMMIT\\train\\opus_books\\tokenize\\de.json\n",
       "Loading existing tokenizer file for language de...\n",
-      "Looking for tokenizer file: /home/caverntwo/source/repos/SUMMIT/train/opus_books/tokenize/en.json\n",
+      "Looking for tokenizer file: D:\\Github\\SUMMIT\\train\\opus_books\\tokenize\\en.json\n",
       "Loading existing tokenizer file for language en...\n",
       "Finding longest items...\n",
       "Longest items found: de: 479, en: 466\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -122,12 +122,23 @@
      "output_type": "stream",
      "text": [
       "Loading tokenizers...\n",
-      "Looking for tokenizer file: /home/caverntwo/source/repos/SUMMIT/train/opus_books/tokenize/de.json\n",
+      "Looking for tokenizer file: D:\\Github\\SUMMIT\\train\\opus_books\\tokenize\\de.json\n",
       "Loading existing tokenizer file for language de...\n",
-      "Looking for tokenizer file: /home/caverntwo/source/repos/SUMMIT/train/opus_books/tokenize/en.json\n",
+      "Looking for tokenizer file: D:\\Github\\SUMMIT\\train\\opus_books\\tokenize\\en.json\n",
       "Loading existing tokenizer file for language en...\n",
-      "Loading model\n",
-      "Found latest model at: train/opus_books/model/latest.pth\n"
+      "Loading model\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "No existing model found!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_latest_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32md:\\Github\\SUMMIT\\src\\model.py:42\u001b[0m, in \u001b[0;36mModel.load_latest_model\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcreate_model()\n\u001b[0;32m     41\u001b[0m model_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mget_latest_model_path()\n\u001b[1;32m---> 42\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m model_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m: \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo existing model found!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     44\u001b[0m state \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mload(model_path, map_location\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mdevice)\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mload_state_dict(state[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel_states\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: No existing model found!"
      ]
     }
    ],
@@ -138,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,50 +247,28 @@
     "# Assert is useless here because we only ever get tokens, without a batch?\n",
     "# Has to be looked over again, a reason has to be provided\n",
     "\n",
-    "\tmodel_out = decode_model(model.model, encoder_input, encoder_mask, vocab_source, vocab_target, max_tokens, device)\n",
+    "\tload_sentence_values = decode_sentence(model.model, encoder_input, encoder_mask, vocab_source, vocab_target, max_tokens, device)\n",
     "\treturn batch, encoder_input_tokens, decoder_input_tokens\n",
     "\n",
     "\n",
+    "def decode_sentence(model, to_encoder, mask_encoder, tokenizer_source, tokenizer_target, config, device):\n",
+    "\ts_token = tokenizer_target.token_to_id(\"<S>\")\n",
+    "\te_token = tokenizer_target.token_to_id(\"<E>\")\n",
     "\n",
-    "def decode_model(model, to_encoder, mask_encoder, vocab_source, vocab_target, config, device):\n",
-    "\ts_token = vocab_target.token_to_id(\"<S>\")\n",
-    "\te_token = vocab_target.token_to_id(\"<E>\")\n",
+    "\tencoded = model.encode(to_encoder, mask_encoder) #Encoder processes the input tokens with the encoder attention mask\n",
     "\n",
-    "\tencoded = model.encode(to_encoder, mask_encoder) #Input is sent through the encoder and prepared to be sent into the encoder here\n",
     "\tto_decoder = torch.empty(1,1).fill_(s_token).type_as(to_encoder).to(device)\n",
     "\t# Initializes tensor of shape (1,1), fills it with SOS tokens, sets it to be of the same type as to_encoder, gets it onto cuda\n",
+    "\n",
     "\tfor iteration in range(0, max_tokens): # iterates until it reaches the limit for the sequence length\n",
-    "\t\tmask_decoder = TranslationDataset.triangular_mask(to_decoder.size(1)).type_as(mask_encoder).to(device)\n",
-    "\t\t#Creates triangular matrix of initial size (1,1), this will increase with each iteration, makes sure it is of the same type, gets it onto cuda\n",
     "\n",
-    "\t\t# get output\n",
-    "\t\toutput = model.decode(encoded, mask_encoder, to_decoder, mask_decoder)\n",
-    "\t\t# .Decode does:\n",
-    "\t\t\"\"\"\n",
-    "\t\t#Decodes the target sequence using encoder output.\n",
-    "\t\t((batch_size, source_sequence, dimensions_model), (batch_size, target_sequence, dimensions_model))\n",
-    "\t\t\n",
-    "\t\tArgs:\n",
-    "\t\t\tencoder_output (Tensor): Output from the encoder of shape (batch_size, source_sequence, dimensions_model).\n",
-    "\t\t\tencoder_mask (Tensor): Attention mask for the encoder output, ignoring padding tokens.\n",
-    "\t\t\tdecoder_input_sequence (Tensor): Input sequence of decoder in the shape (batch_size, target_sequence).\n",
-    "\t\t\tdecoder_mask (Tensor): Attention mask for the target sequence, including continuos token masking.\n",
-    "\n",
-    "\t\tReturns:\n",
-    "\t\t\tTensor: Decoded output of shape (batch_size, target_sequence, dimensions_model).\n",
-    "\t\t\n",
-    "\t\tdecoder_input_sequence = self.target_embedding_layer(decoder_input_sequence)\n",
-    "\t\tdecoder_input_sequence = self.target_pe_layer(decoder_input_sequence)\n",
-    "\t\treturn self.decoder(decoder_input_sequence, encoder_output, encoder_mask, decoder_mask)\n",
-    "\t\t\"\"\"\n",
-    "\t\t#Passes all inputs needed into the decoder block\n",
+    "\t\tmask_decoder = TranslationDataset.triangular_mask(to_decoder.size(1)).type_as(mask_encoder).to(device) #Creates the decoder mask which ensures that the model cannot see into the future\n",
+    "\t\toutput = model.decode(encoded, mask_encoder, to_decoder, mask_decoder) #Now uses the mask to get the attention, returns a tensor of logits?\n",
     "\n",
     "\t\tp = model.project(output[:, -1])\n",
-    "\t\t#Extracts last predicted token and passes it through the projection layer, which maps the decoder output to logits over the vocabulary\n",
-    "\t\tnot_needed_values, most_likely = torch.max(p, dim=1) # _ would give the value / probabilites for the logits, but we don't need them, thats why this is done\n",
+    "\t\tnot_needed_values, most_likely = torch.max(p, dim=1)\n",
+    "\t\tif most_likely == e_token: break \n",
     "\n",
-    "\t\tif most_likely == e_token: break # we reached the end\n",
-    "\t\t#next run with old content to decode + most likely token\n",
     "\t\tto_decoder = torch.cat(\n",
     "\t\t\t[\n",
     "\t\t\t\tto_decoder,  # Last input\n",
@@ -292,72 +281,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mtx2df(m, max_row, max_col, row_tokens, col_tokens): # Converts attention matrix into Pandas Dataframe\n",
-    "\t#m is the attention matrix, max_rows, and the tokens of the attention matrix / their positions. Done to more easily visualize data\n",
-    "\treturn pd.DataFrame(\n",
-    "\t\t[\n",
-    "\t\t\t(\n",
-    "\t\t\t\trows, #iterating over all rows\n",
-    "\t\t\t\tcolumns , #iterating over all columns  \n",
-    "\t\t\t\tfloat(m[rows, columns]), #Gets the attention value at [row, ccolumn], is a number\n",
-    "\t\t\t\t\"%.3d %s\" % (rows, row_tokens[rows] if len(row_tokens) > rows else \"<blank>\"), #\"%.3d %s\" % formats number as a three-digit integer\n",
-    "\t\t\t\t\"%.3d %s\" % ( columns , col_tokens[columns] if len(col_tokens) > columns  else \"<blank>\"), #Retrieves the index if it exists, if it is out of range fills it with \"blank\"\n",
-    "\t\t\t) #row_tokens and col_tokens give a number\n",
-    "\t\t\tfor rows in range(m.shape[0]) #.shape returns the shape of the matrix\n",
-    "\t\t\tfor columns in range(m.shape[1]) #.shape returns the shape of the matrix\n",
-    "\t\t\tif rows < max_row and columns < max_col # The tuple which has been created above is only added if rows < max_row and columns < max_col\n",
-    "\t\t],\n",
-    "\t\tcolumns =[\"row\", \"column\", \"value\", \"row_token\", \"col_token\"], #defines column names for the Pandas DataFrame being created.\n",
-    "\t)\n",
+    "def matrix_to_dataframe(attention_matrix, max_row, max_col, row_tokens, col_tokens): # Converts attention matrix into Pandas Dataframe\n",
+    "\tdata = [] #List for the data to be stored in\n",
+    "\tfor row in range(attention_matrix.shape[0]): # loop over the rows\n",
+    "\t\tfor col in range(attention_matrix.shape[1]): # loop over the columns\n",
     "\n",
-    "def get_attn_map(attn_type: str, layer: int, head: int): #Gets a specific attention type from a specified layer and a specified head\n",
-    "\tif attn_type == \"encoder\":\n",
-    "\t\t\n",
-    "\t\tattn = model.model.encoder.encoder_module_list._modules['0'].self_attention_layer.attention_scores # self attention_scores comes from calculate_attention in transformer\n",
-    "\telif attn_type == \"decoder\":\n",
-    "\t\tattn = model.model.decoder.decoder_module_list._modules['0'].self_attention_layer.attention_scores # self\n",
-    "\telif attn_type == \"encoder-decoder\":\n",
-    "\t\tattn = model.model.decoder.decoder_module_list._modules['0'].cross_attention_layer.attention_scores #cross\n",
-    "\treturn attn[0, head].data\n",
+    "\t\t\tif row < max_row and col < max_col:\n",
+    "\t\t\t\tattention_value = float(attention_matrix[row, col])\n",
     "\n",
+    "\t\t\t\trow_token = row_tokens[row] if row < len(row_tokens) else \"<blank>\"\n",
+    "\t\t\t\tcol_token = col_tokens[col] if col < len(col_tokens) else \"<blank>\"\n",
+    "\n",
+    "\t\t\t\trow_label = f\"{row:03d} {row_token}\"\n",
+    "\t\t\t\tcol_label = f\"{col:03d} {col_token}\"\n",
+    "\t\t\t\t\n",
+    "\t\t\t\tdata.append((row, col, attention_value, row_label, col_label))\n",
+    "\tdataframe = pd.DataFrame(data, columns=[\"row\", \"column\", \"value\", \"row_token\", \"col_token\"])\n",
+    "\n",
+    "\treturn dataframe\n",
+    "\n",
+    "\n",
+    "def get_attention_map(attention_type: str, layer: int, head: int):\n",
+    "\n",
+    "\tif attention_type == \"encoder\":\n",
+    "\t\tattention = model.model.encoder.encoder_module_list._modules['0'].self_attention_layer.attention_scores\n",
+    "\t\n",
+    "\telif attention_type == \"decoder\":\n",
+    "\t\tattention = model.model.decoder.decoder_module_list._modules['0'].self_attention_layer.attention_scores\n",
+    "\n",
+    "\telif attention_type == \"encoder-decoder\":\n",
+    "\t\tattention = model.model.decoder.decoder_module_list._modules['0'].cross_attention_layer.attention_scores\n",
+    "\t\n",
+    "\treturn attention[0, head].data #.data gives the raw data without any tracking noise\n",
+    "\t\n",
     "\t#Shape (batch_size, num_heads, query_len, key_len) Gets the first sample in the batch for inference and the specified attention head, .data to extract raw tensor values\n",
     "\n",
-    "def attn_map(attn_type, layer, head, row_tokens, col_tokens, max_sentence_len):\n",
-    "\tdf = mtx2df(get_attn_map(attn_type, layer, head), max_sentence_len, max_sentence_len, row_tokens, col_tokens) #Attention matrix, max_row, max_col, row_tokens, col_tokens\n",
-    "\t#Creates dataframe representation of an attention map\n",
+    "def attention_map(attention_type, layer, head, row_tokens, col_tokens, max_sentence_len):\n",
+    "\tdataframe = matrix_to_dataframe(get_attention_map(attention_type, layer, head), max_sentence_len, max_sentence_len, row_tokens, col_tokens) \n",
     "\n",
-    "\treturn (alt.Chart(data=df).mark_rect().encode(  #df is the data we feed it, creates rects\n",
-    "\t\t\tx=alt.X(\"col_token\", axis=alt.Axis(title=\"\")), # Horizontal axis represents tokens on the column side.\n",
-    "\t\t\ty=alt.Y(\"row_token\", axis=alt.Axis(title=\"\")), # Vertical axis represents tokens on the row side.\n",
-    "\t\t\tcolor=alt.Color(\"value\", scale=alt.Scale(scheme=\"greens\")),\n",
-    "\t\t\ttooltip=[\"row\", \"column\", \"value\", \"row_token\", \"col_token\"],\n",
-    "\t\t)  #Changes color intensity based on value, displays values when hovering over the rects\n",
-    "\t\t#.title(f\"Layer {layer} Head {head}\")\n",
-    "\t\t.properties(height=200, width=200, title=f\"Layer {layer} Head {head}\") #sets size and gives dynamic titles \n",
-    "\t\t.interactive() # enables zooming etc.\n",
+    "\treturn(\talt.Chart(dataframe).mark_rect().encode(\n",
+    "\t\tx = \"col_token\", # X and Y have to match the name of the dataframe columns\n",
+    "\t\ty = \"row_token\",\n",
+    "\t\tcolor = alt.Color(\"value\", scale=alt.Scale(scheme=\"greens\")),\n",
+    "\t\ttooltip=[\"row\", \"column\", \"value\", \"row_token\", \"col_token\"]\n",
+    "\t).properties(height=200, width=200, title = f\"Layer {layer}, Head {head}\")\n",
     "\t)\n",
     "\n",
-    "def get_all_attention_maps(attn_type: str, layers: list[int], heads: list[int], row_tokens: list, col_tokens, max_sentence_len: int): \n",
-    "\t# Creates grid of attention maps by layers and heads\n",
-    "\tcharts = []\n",
+    "def get_all_attention_maps(attention_type: str, layers: list[int], heads: list[int], row_tokens, col_tokens, max_sentence_len: int):\n",
+    "\tcharts = [] \n",
     "\tfor layer in layers:\n",
     "\t\trowCharts = []\n",
     "\t\tfor head in heads:\n",
-    "\t\t\trowCharts.append(attn_map(attn_type, layer, head, row_tokens, col_tokens, max_sentence_len)) #Creates Heatmaps for each layer \n",
-    "\t\tcharts.append(alt.hconcat(*rowCharts)) #horizontal concatenation to arrange attention maps for all heads in a single row\n",
-    "\treturn alt.vconcat(*charts) # vertical concatenation to stack rows on top of each other\n",
-    "\t\n",
-    "\t\n",
+    "\t\t\trowCharts.append(attention_map(attention_type, layer, head, row_tokens, col_tokens, max_sentence_len))\n",
+    "\t\tcharts.append(alt.hconcat(*rowCharts))\n",
+    "\treturn alt.vconcat(*charts)\n",
+    "\n",
+    "\t# The * operator unpacks the list, so instead of [1, 2, 3] it gets (1, 2, 3) and it can work with that\n",
     "\t#Attention of all heads and all layers that are given as the input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +654,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml",
+   "display_name": "ML",
    "language": "python",
    "name": "python3"
   },
